--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js/sqlite": "^1.11.0",
     "@sap-cloud-sdk/http-client": "^4.0.2",
     "@sap-cloud-sdk/resilience": "^4.0.2",
     "@sap/cds": "^8",
+    "@sap/xssec": "^4",
     "express": "^4",
     "sort-array": "^5.0.0",
-    "@sap/xssec": "^4"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
-    "@cap-js/sqlite": "^1",
+    "@cap-js/sqlite": "^1.11.0",
     "@sap/cds-dk": "^8",
     "mbt": "^1.2.29",
     "rimraf": "^5.0.5"
@@ -38,10 +40,17 @@
       "auth": "xsuaa",
       "html5-runtime": true,
       "destinations": true,
-      "workzone": true
+      "workzone": true,
+      "db": {
+        "kind": "sqlite",
+        "credentials": {
+          "url": "workflow.db"
+        }
+      }
     }
   },
   "sapux": [
+    "app/workflowmonitor",
     "app/workflowmonitor"
   ]
 }
