--- a/mta.yaml
+++ b/mta.yaml
@@ -1,143 +1,136 @@
 _schema-version: 3.3.0
 ID: workflow
-version: 1.0.0
-description: "A simple CAP project."
+description: A simple CAP project.
+version: 1.0.1
+modules:
+- name: workflow-srv
+  type: nodejs
+  path: gen/srv
+  requires:
+  - name: testworkflow-des
+  - name: workflow-auth
+  provides:
+  - name: srv-api
+    properties:
+      srv-url: ${default-url}
+  parameters:
+    buildpack: nodejs_buildpack
+    instances: 1
+  build-parameters:
+    builder: npm-ci
+- name: workflow-app-deployer
+  type: com.sap.application.content
+  path: .
+  requires:
+  - name: workflow-html5-repo-host
+    parameters:
+      content-target: true
+  build-parameters:
+    build-result: resources/
+    requires:
+    - artifacts:
+      - workflowmonitor.zip
+      name: workflowworkflowmonitor
+      target-path: resources/
+- name: workflowworkflowmonitor
+  type: html5
+  path: app/workflowmonitor
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+- name: workflow-destinations
+  type: com.sap.application.content
+  requires:
+  - name: workflow-auth
+    parameters:
+      service-key:
+        name: workflow-auth-key
+  - name: workflow-html5-repo-host
+    parameters:
+      service-key:
+        name: workflow-html5-repo-host-key
+  - name: srv-api
+  - name: testworkflow-des
+    parameters:
+      content-target: true
+  parameters:
+    content:
+      instance:
+        destinations:
+        - Name: workflow-html5-repository
+          ServiceInstanceName: workflow-html5-repo-host
+          ServiceKeyName: workflow-html5-repo-host-key
+          sap.cloud.service: workflow.service
+        - Authentication: OAuth2UserTokenExchange
+          Name: workflow-auth
+          ServiceInstanceName: workflow-auth
+          ServiceKeyName: workflow-auth-key
+          sap.cloud.service: workflow.service
+        existing_destinations_policy: update
+  build-parameters:
+    no-source: true
+resources:
+- name: testworkflow-des
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      HTML5Runtime_enabled: true
+      init_data:
+        instance:
+          destinations:
+          - Authentication: NoAuthentication
+            HTML5.DynamicDestination: true
+            HTML5.ForwardAuthToken: true
+            Name: workflow-srv-api
+            ProxyType: Internet
+            Type: HTTP
+            URL: ~{srv-api/srv-url}
+          - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          existing_destinations_policy: update
+    service: destination
+    service-plan: lite
+  requires:
+  - name: srv-api
+    group: destinations
+    properties:
+      forwardAuthToken: true
+      name: srv-api
+      url: ~{srv-url}
+- name: workflow-html5-repo-host
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: html5-apps-repo
+    service-plan: app-host
+- name: workflow-html5-runtime
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: html5-apps-repo
+    service-plan: app-runtime
+- name: workflow-auth
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      tenant-mode: dedicated
+      xsappname: workflow-${space}
+    path: ./xs-security.json
+    service: xsuaa
+    service-plan: application
 parameters:
-  enable-parallel-deployments: true
   deploy_mode: html5-repo
+  enable-parallel-deployments: true
 build-parameters:
   before-all:
-    - builder: custom
-      commands:
-        - npm ci
-        - npx cds build --production
-modules:
-  - name: workflow-srv
-    type: nodejs
-    path: gen/srv
-    parameters:
-      instances: 1
-      buildpack: nodejs_buildpack
-    build-parameters:
-      builder: npm-ci
-    provides:
-      - name: srv-api # required by consumers of CAP services (e.g. approuter)
-        properties:
-          srv-url: ${default-url}
-    requires:
-      - name: testworkflow-des
-      - name: workflow-auth
-
-  - name: workflow-app-deployer
-    type: com.sap.application.content
-    path: .
-    requires:
-      - name: workflow-html5-repo-host
-        parameters:
-          content-target: true
-    build-parameters:
-      build-result: resources/
-      requires:
-        - name: workflowworkflowmonitor
-          artifacts:
-            - comworkflowmonitorworkflowmonitor.zip
-          target-path: resources/
-
-  - name: workflowworkflowmonitor
-    type: html5
-    path: app/workflowmonitor
-    build-parameters:
-      build-result: dist
-      builder: custom
-      commands:
-        - npm ci
-        - npm run build
-      supported-platforms:
-        []
-
-  - name: workflow-destinations
-    type: com.sap.application.content
-    requires:
-      - name: workflow-auth
-        parameters:
-          service-key:
-            name: workflow-auth-key
-      - name: workflow-html5-repo-host
-        parameters:
-          service-key:
-            name: workflow-html5-repo-host-key
-      - name: srv-api
-      - name: testworkflow-des
-        parameters:
-          content-target: true
-    build-parameters:
-      no-source: true
-    parameters:
-      content:
-        instance:
-          existing_destinations_policy: update
-          destinations:
-            - Name: workflow-html5-repository
-              ServiceInstanceName: workflow-html5-repo-host
-              ServiceKeyName: workflow-html5-repo-host-key
-              sap.cloud.service: workflow.service
-            - Name: workflow-auth
-              Authentication: OAuth2UserTokenExchange
-              ServiceInstanceName: workflow-auth
-              ServiceKeyName: workflow-auth-key
-              sap.cloud.service: workflow.service
-
-
-resources:
-  - name: testworkflow-des
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: destination
-      service-plan: lite
-      config:
-        HTML5Runtime_enabled: true
-        init_data:
-          instance:
-            existing_destinations_policy: update
-            destinations:
-              - Name: workflow-srv-api
-                URL: ~{srv-api/srv-url}
-                Authentication: NoAuthentication
-                Type: HTTP
-                ProxyType: Internet
-                HTML5.ForwardAuthToken: true
-                HTML5.DynamicDestination: true
-              - Name: ui5
-                URL: https://ui5.sap.com
-                Authentication: NoAuthentication
-                Type: HTTP
-                ProxyType: Internet
-
-    requires:
-      - name: srv-api
-        group: destinations
-        properties:
-          name: srv-api # must be used in xs-app.json as well
-          url: ~{srv-url}
-          forwardAuthToken: true
-
-  - name: workflow-html5-repo-host
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: html5-apps-repo
-      service-plan: app-host
-  - name: workflow-html5-runtime
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: html5-apps-repo
-      service-plan: app-runtime
-  - name: workflow-auth
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: xsuaa
-      service-plan: application
-      path: ./xs-security.json
-      config:
-        xsappname: workflow-${space}
-        tenant-mode: dedicated
-
+  - builder: custom
+    commands:
+    - npm ci
+    - npx cds build --production
+    - cp -r db/data gen/srv/srv/data
+    - cp -r workflow.db gen/srv
